--- a/QuanLyDiem/QuanLyDiem/Views/KetQua/XemDiem.cshtml
+++ b/QuanLyDiem/QuanLyDiem/Views/KetQua/XemDiem.cshtml
@@ -7,17 +7,17 @@
 
 <h2>XemDiem</h2>
 
-@using (Html.BeginForm("XemDiemTheoMaSv", "KetQua")) 
+@*@using (Html.BeginForm("XemDiemTheoMaSv", "KetQua"))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>SinhVien</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+
         <div class="form-group">
-            @Html.LabelFor(model => model.Id,"Nhập mã SV để xem điểm", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Id, "Nhập mã SV để xem điểm", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.LopId, "", new { @class = "text-danger" })
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-}
+}*@
 
 <div>
     @Html.ActionLink("Back to List", "Index")
